--- a/ht2/myProject/package.json
+++ b/ht2/myProject/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my_first_project",
+  "name": "java_script_advanced",
   "version": "1.0.0",
   "description": "internet-shop",
   "main": "index.js",
