--- a/ht7/project/package.json
+++ b/ht7/project/package.json
@@ -6,9 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "nodemonConfig": {
+    "ignore": [
+      "**/*.json"
+    ]
+  },
   "author": "cosmos-29",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.0"
+    "express": "^4.17.0",
+    "moment": "^2.24.0"
   }
 }
